<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_MODULE_INTERFACE_INPUT" Id="{0e3e2f48-752e-4828-ac70-a9b4ea1b5927}">
    <Declaration><![CDATA[TYPE DUT_MODULE_INTERFACE_INPUT :
STRUCT
	///Mode to run (init,auto,manual,..)
	Mode: DUT_MODE;
	///check if the modules is alive
	ConnectionTestInput: BOOL;
	///Modules get their position
	PositionInput: LREAL;
	///Update data= TRUE, No updatedata=FALSE
	Watchbit: BOOL;
	///Emergency stop
	EmergencyStop: BOOL;
	///Range of INPUT skills
	SkillInput: ARRAY[0..SkillCnt] OF DUT_SKILL_INPUT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>